# multivoro

./: .gitmodules  CMakeLists.txt  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: publish-sdist-wheels.yml  run-tox.yml  tox.yml  wheels.yml
ci/: build_libomp.sh
ext/: CMakeLists.txt
src/: multivoro.cpp
src/multivoro/: __init__.py  exceptions.py
tests/: test_compute_voronoi.py
